--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@
 header {
     width: 100vw;
     height: 100px;
-    border-bottom: solid px rgba(21, 97, 107, 0.3);
+    border-bottom: solid 1px rgba(21, 97, 107, 0.3);
     font-family: 'Poppins';
     background-color: rgb(207, 190, 32);
+    margin: 0px left;
 }
 
 header .inner {
@@ -67,7 +68,7 @@ header nav a {
 }
 
 header nav .button {
-    background-color: #1ab26b;
+    background-color: #030303;
     /* This HEX is the color of the button */
     color: #FFF;
     padding: 10px 20px;
@@ -75,7 +76,7 @@ header nav .button {
 }
 
 header nav .button:hover {
-    filter: brightness(1.05);
+    filter: brightness(1.55);
 }
 
 p .center {
@@ -83,4 +84,9 @@ p .center {
     height: 100%;
     float: left;
     margin-right: 30px;
+}
+
+body {
+    margin-left: 0px;
+    margin-top: 0px;
 }
