--- a/style.css
+++ b/style.css
@@ -1,96 +1,101 @@
-    * {
-        list-style: none;
-        text-decoration: none;
-    }
-    
-    header {
-        width: 100vw;
-        height: 100px;
-        border-bottom: solid 1px rgba(21, 97, 107, 0.3);
-        font-family: 'Poppins';
-        background-color: rgb(207, 190, 32);
-        margin: 0px left;
-    }
-    
-    header .inner {
-        width: 1300px;
-        height: 100%;
-        display: block;
-        margin: 0 auto;
-    }
-    
-    header .logo {
-        display: table;
-        height: 100%;
-        float: left;
-    }
-    
-    header .logo div {
-        height: 100%;
-        display: table-cell;
-        vertical-align: middle;
-    }
-    
-    header .logo img {
-        height: 75px;
-        margin-top: 5px;
-        /* Optical alignment of the logo */
-    }
-    
-    header nav {
-        float: right;
-        height: 100%;
-    }
-    
-    header nav li {
-        display: table;
-        height: 100%;
-        float: left;
-        margin-right: 30px;
-    }
-    
-    #titre {
-        margin-right: 600px;
-        color: rgb(0, 0, 0);
-    }
-    
-    header nav li:last-of-type {
-        margin-right: 0;
-    }
-    
-    header nav span {
-        display: table-cell;
-        vertical-align: middle;
-    }
-    
-    header nav a {
-        color: #101010;
-    }
-    
-    header nav .button {
-        background-color: #030303;
-        /* This HEX is the color of the button */
-        color: rgb(248, 237, 134);
-        padding: 10px 20px;
-        border-radius: 4px;
-    }
-    
-    header nav .button:hover {
-        filter: brightness(1.55);
-    }
-    
-    p .center {
-        display: table;
-        height: 100%;
-        float: left;
-        margin-right: 30px;
-    }
-    
-    body {
-        margin-left: 0px;
-        margin-top: 0px;
-    }
-    
-    p {
-        margin-left: 10px;
-    }
+* {
+    list-style: none;
+    text-decoration: none;
+}
+
+header {
+    width: 100vw;
+    height: 100px;
+    border-bottom: solid 3px rgba(21, 97, 107, 0.3);
+    background-color: rgb(207, 190, 32);
+    margin: 0px left;
+}
+
+header .inner {
+    width: 1300px;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+}
+
+header .logo {
+    display: table;
+    height: 100%;
+    float: left;
+}
+
+header .logo div {
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+header .logo img {
+    height: 75px;
+    margin-top: 5px;
+    /* Optical alignment of the logo */
+}
+
+header nav {
+    float: right;
+    height: 100%;
+}
+
+header nav li {
+    display: table;
+    height: 100%;
+    float: left;
+    margin-right: 30px;
+}
+
+#titre {
+    margin-right: 600px;
+    color: rgb(0, 0, 0);
+}
+
+header nav li:last-of-type {
+    margin-right: 0;
+}
+
+header nav span {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+header nav a {
+    color: #101010;
+}
+
+header nav .button {
+    background-color: #030303;
+    /* This HEX is the color of the button */
+    color: rgb(248, 237, 134);
+    padding: 10px 20px;
+    border-radius: 4px;
+}
+
+header nav .button:hover {
+    filter: brightness(1.55);
+}
+
+p .center {
+    display: table;
+    height: 100%;
+    float: left;
+    margin-right: 30px;
+}
+
+body {
+    margin-left: 0px;
+    margin-top: 0px;
+    background-color: rgb(195, 196, 135);
+}
+
+p {
+    margin-left: 8px;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+}
