--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header nav li {
 }
 
 #titre {
-    margin-right: 600px;
+    margin-right: 450px;
     color: rgb(0, 0, 0);
 }
 
@@ -105,6 +105,37 @@ p {
     display: flex;
     justify-content: center;
     margin-bottom: 8px;
+}
+
+.left {
+    display: flex;
+    justify-content: left;
+    margin-bottom: 8px;
+    margin-left: 8px;
+}
+
+.right {
+    display: flex;
+    justify-content: right;
+    margin-bottom: 8px;
+    margin-right: 8px;
+}
+
+.left {
+    display: flex;
+    justify-content: left;
+    margin-bottom: 8px;
+}
+
+#gnu_box {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    margin-left: 40px;
+    margin-right: 20px;
+    margin-top: 8px;
+    border-color: rgb(0, 0, 0);
+    padding: 80px;
+    background-color: rgb(185, 216, 236);
+    font: 20px "Open Sans", sans-serif;
 }
 
 
